--- a/assets/css/projet_conversion.css
+++ b/assets/css/projet_conversion.css
@@ -10,8 +10,9 @@ body{
 
 }
 
-/* Dropdown code from https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp */
-/* https://stackoverflow.com/questions/70712300/dropdown-menu-inside-a-navigation-bar*/
+/* Dropdown code from :*/
+/* https://stackoverflow.com/questions/70712300/dropdown-menu-inside-a-navigation-bar
+/* Hint: le secret c'est display:none => :hover display:block' */
 
 /*begin dropdown*/
 
@@ -30,34 +31,29 @@ body{
     /*left: 50px;*/
 
     background-color: green;
-    color: black;
     min-width: 140px;
-    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+
     z-index: 1;
 }
 
 .dropdown-content a {
-
     color: black;
-    /*padding: 12px 16px;*/
+    border-radius: 20px;
     text-decoration: none;
     display: block;
     text-align: left;
-
 }
 
 .dropdown-content a:hover {
     background-color: yellow;
     color: black;
-    border-radius: 20px;
+
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
     border-radius: 20px;
     color: black;
-
-
 }
 
 .dropbtn {
@@ -81,26 +77,21 @@ body{
 /*end dropdow */
 
 
-
+/*css for footer*/
 
 .footer-container{
 
-/*position close to the bottom of the window*/
    margin-top: 30%;
     background-color: black;
     opacity: 0.8;
     color: white;
-
     display: flex;
     flex-direction: column;
-
     justify-content: center;
 }
 
 
-
 a{
-
     color: red;
 }
 
@@ -109,16 +100,12 @@ a:hover{
     color: orangered;
 }
 .box-row{
-
     color: red;
     font-size: large;
-
     display: flex;
     flex-direction: row;
     gap: 5%;
-    justify-content: center;
-
-}
+    justify-content: center;}
 
 .bottom-item{
     color: red;
@@ -131,13 +118,12 @@ a:hover{
     /*psosition below the footer*/
     text-align: center;
     justify-content: center;
-
-
     color: gold;
     font-size: small;
     padding-bottom: 1%;
-
-
 }
+
+
+/* End css for footer*/
 
 
