--- a/assets/css/projet_conversion.css
+++ b/assets/css/projet_conversion.css
@@ -1,10 +1,10 @@
 body{
 
     margin: 20px;
-    color: white;
+    color: black;
     font-family: "Noto Sans Gothic", sans-serif;
 
-    background-image: url("../images/noel.jpg");
+    background-image: url("../images/background-2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -21,6 +21,10 @@ body{
     display: inline-block;
 }
 
+.dropdown:hover {
+    color: red;
+}
+
 
 .dropdown-content {
 
@@ -30,15 +34,16 @@ body{
     /*margin-top: 2px;*/
     /*left: 50px;*/
 
-    background-color: green;
+
+    background-color: black;
     min-width: 140px;
 
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    border-radius: 20px;
+    color: goldenrod;
+    border-radius: 10px;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -82,17 +87,22 @@ body{
 .footer-container{
 
    margin-top: 30%;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 10px;
+
     background-color: black;
-    opacity: 0.8;
+    opacity: 0.5;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
 
 
 a{
-    color: red;
+    color: gold;
 }
 
 
