Rajouter un div autour le carousel pour fixer l'hauteur et rajouter du commentaire en dessous

--- a/assets/css/projet_conversion.css
+++ b/assets/css/projet_conversion.css
@@ -41,7 +41,13 @@ body{
 }
 
 
-
+.carousel-container{
+    margin-top: 2%;
+    margin-left: 30%;
+    margin-right-30%;
+    height: 50%;
+    width: 40%;
+}
 
 
 
